--- a/CodeFirstNewDatabaseSample/CodeFirstNewDatabaseSample.csproj
+++ b/CodeFirstNewDatabaseSample/CodeFirstNewDatabaseSample.csproj
@@ -32,7 +32,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -42,11 +49,47 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAL\BloggingContext.cs" />
+    <Compile Include="Migrations\201709031814041_InitialCreate.cs" />
+    <Compile Include="Migrations\201709031814041_InitialCreate.Designer.cs">
+      <DependentUpon>201709031814041_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709031841174_AddURL.cs" />
+    <Compile Include="Migrations\201709031841174_AddURL.Designer.cs">
+      <DependentUpon>201709031841174_AddURL.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709031852045_AddUser.cs" />
+    <Compile Include="Migrations\201709031852045_AddUser.Designer.cs">
+      <DependentUpon>201709031852045_AddUser.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709031858397_ChageDisplayName.cs" />
+    <Compile Include="Migrations\201709031858397_ChageDisplayName.Designer.cs">
+      <DependentUpon>201709031858397_ChageDisplayName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Blog.cs" />
+    <Compile Include="Models\Post.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201709031814041_InitialCreate.resx">
+      <DependentUpon>201709031814041_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709031841174_AddURL.resx">
+      <DependentUpon>201709031841174_AddURL.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709031852045_AddUser.resx">
+      <DependentUpon>201709031852045_AddUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709031858397_ChageDisplayName.resx">
+      <DependentUpon>201709031858397_ChageDisplayName.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
